# gdsc_recruitment

./: README.md  app.py  pyproject.toml
templates/: 502.html  home.html  layout.html
