[tool.poetry]
name = "gdsc_recruitment"
version = "0.1.0"
description = ""
authors = ["Shakya Majumdar <shakyamajumdar1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
